--- a/test-output/old/Suite/OrangeHRM.properties
+++ b/test-output/old/Suite/OrangeHRM.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Airbnb][SuiteResult context=OrangeHRM][SuiteResult context=DemoWebShop]
+[SuiteResult context=OrangeHRM][SuiteResult context=DemoWebShop][SuiteResult context=AirBnb]
